Update Final Assignment 2.tex

--- a/Final Assignment 2.tex
+++ b/Final Assignment 2.tex
@@ -1,3 +1,6 @@
+%Original Latex file, this one I created before I made adjustments in Markdown.%
+
+
 \documentclass[10pnt]{article}
 \author{Irene}
 \title{Assignment II}
